--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,8 +57,8 @@ services:
       rabbitmq:
         condition: service_started  # <-- Ждём, пока RabbitMQ запустится
     environment:
-      DATABASE_URL: "postgresql+asyncpg://postgres:admin123@pg:5432/UserYDB"
-      RMQ_URL: "amqp://guest:guest@rabbitmq:5672/"
+      DATABASE_URL: "postgresql+asyncpg://username:password@pg:5432/UserYDB"
+      RMQ_URL: "amqp://username:password@rabbitmq:5672/"
 
       REDIS_HOST: "redis"
       REDIS_PORT: "6379"
