--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_URL = "postgresql+asyncpg://postgres:password@localhost:5432/UserYDB"
-RMQ_URL = "amqp://guest:guest@rabbitmq:5672/"
+RMQ_URL = "amqp://username:password@rabbitmq:5672/"
 
 REDIS_HOST = "localhost"
 REDIS_PORT = "6379"
